이터러블, 이터레이터

--- a/2-es6/index.html
+++ b/2-es6/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./2-arr-set-map.js"></script>
+    <script src="./4-destructor.js"></script>
   </body>
 </html>
